--- a/index.html
+++ b/index.html
@@ -6,29 +6,41 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
+  <div class="logo">
+    <img src="images/logo.svg" alt="Huddle Logo">
 
-  Build The Community Your Fans Will Love
+<div class="intro">
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-  Create connections with your users as you engage in genuine discussion.
+  <img src="images/illustration-mockups.svg" class="illustration" alt="mockup illustration">
+</div>
 
-  Register
+  <div>
+    <h1 class="text">Build The Community Your Fans Will Love</h1>
+
+    <p class="text">Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+    Create connections with your users as you engage in genuine discussion.</p>
+    <button type="button" name="button">Register</button>
+
+  </div>
+
+</div>
+
+
+
 
   <footer>
-    <p class="attribution">
+    <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
-    </p>
+    </p> -->
   </footer>
 </body>
 </html>
