--- a/index.html
+++ b/index.html
@@ -8,39 +8,37 @@
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
+
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
 </head>
 <body>
-  <div class="logo">
-    <img src="images/logo.svg" alt="Huddle Logo">
+  <div class="logo-div">
+    <img src="images/logo.svg" class="logo-image"alt="Huddle Logo">
+</div>
+  <main id="container">
 
-<div class="intro">
+  <div class="intro">
 
-  <img src="images/illustration-mockups.svg" class="illustration" alt="mockup illustration">
+    <img src="images/illustration-mockups.svg" class="illustration" alt="mockup illustration">
+
+      <h1 class="text">Build The Community <br>Your Fans Will Love</h1>
+
+      <p class="text">Huddle re-imagines the way we build communities. You have <br>a voice, but so does your audience.
+      Create connections with <br>your users as you engage in genuine discussion.</p>
+      <button type="button" name="button">Register</button>
+
 </div>
 
-  <div>
-    <h1 class="text">Build The Community Your Fans Will Love</h1>
-
-    <p class="text">Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
-    Create connections with your users as you engage in genuine discussion.</p>
-    <button type="button" name="button">Register</button>
-
-  </div>
-
-</div>
-
-
-
+  </main>
 
   <footer>
-    <!-- <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </p> -->
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
   </footer>
+    <script src="https://kit.fontawesome.com/a4100ca161.js" crossorigin="anonymous"></script>
 </body>
 </html>
