--- a/index.html
+++ b/index.html
@@ -22,22 +22,27 @@
 
   <div class="intro">
 
-    <img src="images/illustration-mockups.svg" class="illustration" alt="mockup illustration">
+  <img src="images/illustration-mockups.svg" class="illustration" alt="mockup illustration">
+
+
 
       <h1 class="text">Build The Community <br>Your Fans Will Love</h1>
 
-      <p class="text">Huddle re-imagines the way we build communities. You have <br>a voice, but so does your audience.
-      Create connections with <br>your users as you engage in genuine discussion.</p>
-      <button type="button" name="button">Register</button>
+      <p class="text">Huddle re-imagines the way we build communities. You have <br class="large-screen">a voice, but so <br class="small-screen"> does your audience.
+      Create connections <br class="small-screen"> with <br class="large-screen">your users as you engage in <br class="small-screen"> genuine discussion.</p>
+<div class="button-div">
+  <button type="button" name="button" class="center">Register</button>
+</div>
+
 
 </div>
 
   </main>
 
   <footer>
-      <a href="#"><i class="fab fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/Sidoo3"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://twitter.com/SAMUEL__ABAH"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.instagram.com/samuel__abah/"><i class="fab fa-instagram"></i></a>
   </footer>
     <script src="https://kit.fontawesome.com/a4100ca161.js" crossorigin="anonymous"></script>
 </body>
