--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 
-      <h1 class="text">Build The Community <br>Your Fans Will Love</h1>
+      <h1 class="text">Build The Community <br class="heading">Your Fans Will Love</h1>
 
       <p class="text">Huddle re-imagines the way we build communities. You have <br class="large-screen">a voice, but so <br class="small-screen"> does your audience.
       Create connections <br class="small-screen"> with <br class="large-screen">your users as you engage in <br class="small-screen"> genuine discussion.</p>
